@@ -34,7 +34,7 @@ public class BlockCracker extends BlockMachine {
     @SideOnly(Side.CLIENT)
     public Item getItem(World p_149694_1_, int p_149694_2_, int p_149694_3_, int p_149694_4_)
     {
-        return Blocks.cracker.getItem();
+        return Blocks.cracker.source.getItem();
     }
 
 }
