@@ -2,6 +2,8 @@ package tw.oresplus.core.helpers;
 
 import java.util.Random;
 
+import appeng.api.AEApi;
+import appeng.api.IAppEngApi;
 import tw.oresplus.OresPlus;
 import net.minecraft.block.Block;
 import net.minecraft.item.ItemStack;
@@ -39,8 +41,14 @@ public class AppEngHelper extends OresHelper {
 	@Override
 	public void registerRecipe(String recipeType, ItemStack input,
 			NBTTagCompound metadata, ItemStack... outputs) {
-		// TODO Auto-generated method stub
-		
+	    if (recipeType == "grinder") {
+	        try {
+	        	api.registries().grinder().addRecipe(input, outputs[0], metadata.getInteger("cranks"));
+	        }
+	        catch (Exception e) {
+	        	OresPlus.log.info("Error registering AppEng2 grinder recipe");
+	        }
+	    }
 	}
 
 }
